--- a/admin/src/main/resources/templates/common/login.html
+++ b/admin/src/main/resources/templates/common/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>后台管理系统-登录</title>
-    <meta name="keywords" content="个人博客：http://ilovey.live">
+    <meta name="keywords" content="个人博客：https://github.com/java-aodeng">
     <meta name="description" content="微信公众号：低调小熊猫">
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/font-awesome.css?v=4.4.0}" rel="stylesheet">
@@ -80,7 +80,7 @@
         </div>
         <div class="signup-footer">
 <!--            <div class="pull-left">
-                &copy; 2019 All Rights Reserved. <a href="http://ilovey.live">低调小熊猫</a>
+                &copy; 2019 All Rights Reserved. <a href="https://github.com/java-aodeng">低调小熊猫</a>
             </div>-->
         </div>
     </div>
