--- a/admin/src/main/resources/templates/common/forgetpwd.html
+++ b/admin/src/main/resources/templates/common/forgetpwd.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>后台管理系统-登录</title>
-    <meta name="keywords" content="个人博客：https://github.com/java-aodeng">
-    <meta name="description" content="微信公众号：低调小熊猫">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/font-awesome.css?v=4.4.0}" rel="stylesheet">
     <link th:href="@{/css/animate.css}" rel="stylesheet">
