--- a/admin/src/main/resources/templates/common/include.html
+++ b/admin/src/main/resources/templates/common/include.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>后台管理系统</title>
-    <meta name="keywords" content="hope-fast后台管理 低调小熊猫（https://github.com/java-aodeng）">
-    <meta name="description" content="hope-fast后台管理 低调小熊猫（https://github.com/java-aodeng）">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
     <!--全局css-->
     <link th:href="@{/favicon.ico}" rel="shortcut icon"/>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
